src/styles_css/Footer.css
.footer-container {
  padding: 40px;
  padding-top: 80px;
  width: 100%;
  background-color: #141414;
  color: #fff;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

.footer-container h1 {
  font-size: 2rem;
  margin-bottom: 20px;
}

.footer-container p {
  margin-bottom: 40px;
}

.footer-newsletter {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
  margin-bottom: 40px;
}

.footer-newsletter button {
  font-size: 15px;
  width: 30%;
  background: linear-gradient(90deg, #4086de 47%, #163351 100%);
  color: #ffffff;
  margin-left: 10px;
  height: 50px;
  border-radius: 30px;
  border: none;
  cursor: pointer;
  transition: 0.3s ease, box-shadow 0.3s ease;
}

.footer-newsletter button:hover {
  background: linear-gradient(
    90deg,
    #5ca0f0 47%,
    /* Lighter blue */ #1f4a73 100% /* Lighter dark blue */
  ) !important;
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2) !important;
  color: #ffffff !important;
}

.footer-bottom {
  display: flex;

  flex-wrap: wrap;
  gap: 20px;

  width: 95%;
}

.footer-links {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

h4 {
  margin-top: 0px;
  margin-bottom: 5px;
  font-size: 20px;
}
.footer-links a {
  color: #fff;
  text-decoration: none;
  font-size: 16px;
  transition: text-decoration 0.3s ease;
}

.footer-links a:hover {
  text-decoration: underline;
}
.icon {
  width: 30px;
  height: 30px;
}
.social-icons {
  display: flex;
  gap: 10px;
  align-items: center;
}
.language {
  display: flex;
  gap: 10px;
  margin-right: 20px;
}
.social-icons a {
  color: #b5b5b5;
  font-size: 16px;
  font-weight: 600;
  text-decoration: none;
  transition: color 0.3s ease;
}

.social-icons a:hover {
  text-decoration: underline;
  color: white;
}

.first-section {
  width: 50%;
}
.first-section .innovative {
  width: 100%;
}
.first-section1 {
  width: 95%;
  display: flex;
  flex-direction: row;
  gap: 20px;
  padding-bottom: 40px;
}

.gradient1 {
  height: 20px;
  background: linear-gradient(
    90deg,
    #4086de 0%,
    /* Light blue */ #163351 20%,
    /* Dark blue */ #4086de 69%,
    /* Light blue */ #163351 100% /* Dark blue */
  );
}

.footer-logo {
  width: 50%;
}
.first-section p {
  color: #7e8492;
  width: 65%;
  line-height: 1.4;
}
.footer-newsletter {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.footer-newsletter1 {
  width: 50%;
  display: flex;
  flex-direction: column;
}

.footer-newsletter input[type="email"] {
  border-radius: 30px;
  background-color: #1d1d21;
  color: #606060;
  border: none;
  width: 70%;
  padding-left: 20px;
  height: 50px;

  font-size: 15px;
}
p {
  font-size: 18px;
}
.innovative {
  background: linear-gradient(
    90deg,
    rgba(255, 255, 255, 1) 0%,
    rgb(170, 169, 169) 55%,
    rgb(78, 78, 78) 100%
  );
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  display: inline-block;
  overflow-wrap: break-word;
  hyphens: auto;
  font-size: 64px;
  font-weight: 700;
  color: #c4c4c400;
}

.rights {
  display: flex;
  flex-direction: row;
  width: 95%;
  margin-top: 30px;
  justify-content: space-between;
  color: #b5b5b5;
}
.names {
  display: flex;
  justify-content: space-between;
  width: 40%;
  gap: 40px;
}

@media (max-width: 850px) {
  .footer-container {
    padding: 0;
    padding-top: 50px;
  }
  .first-section .innovative {
    text-align: center;
  }
  .first-section1 {
    flex-direction: column;
    align-items: flex-start;
    width: 90%;
  }

  .first-section p,
  .footer-newsletter1,
  .first-section {
    width: 100%;
  }

  .footer-bottom {
    margin-top: 40px;
    flex-direction: row;
    align-items: flex-start;
    width: 90%;
  }
  .rights {
    width: 90%;
  }
}

@media (max-width: 768px) {
  .first-section p {
    text-align: center;
  }
  .icon {
    width: 25px !important;
    height: 23px !important;
  }
  .footer-newsletter {
    flex-direction: column;
    align-items: flex-start;
  }

  .footer-bottom {
    flex-direction: column;
    align-items: flex-start;
  }
  .names {
    display: flex;
    margin-top: 30px;
    display: flex;
    flex-direction: column;
    gap: 40px;
  }
  .rights {
    display: flex;
    flex-direction: column;
  }
  .email {
    display: flex;
    flex-direction: column;
    width: 100%;
    gap: 20px;
  }
  .footer-newsletter button {
    width: 45%;
    margin: 0 auto;
    margin-top: 10px;
  }
  .footer-newsletter input[type="email"] {
    width: 100%;
  }
  .innovative {
    font-size: 55px;
  }
  .instagram {
    width: 30px !important;
    height: 28px !important;
    margin-right: 10px;
  }
  .facebook {
    width: 24px !important;
    height: 14px;
  }
  form {
    width: 100%;
    display: flex;
    flex-direction: column;
  }
  .tagline {
    display: none;
  }
  .newsletter-title,
  .newsletter-description,
  .description {
    text-align: center;
    margin: 0 auto;
  }
  .description {
    padding-top: 20px;
  }
  .first-section1 {
    padding: 0px;
  }
}

